Iniciando a versão Mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body onload="pageClient()">
   <div class="overflow">
   </div>
   <header>
@@ -65,7 +65,7 @@
         <p>Get your team in sync, no matter your location. Streamline processes,
           create team rituals, and watch productivity soar.</p>
         <a href="#">Learn more</a>
-        <div>
+        <div class="main__Content__Appsimage__Box">
           <img src="./images/client-databiz.svg" alt="" class="appsImage">
           <img src="./images/client-audiophile.svg" alt="" class="appsImage">
           <img src="./images/client-meet.svg" alt="" class="appsImage">
