Iniciando o Menu mobile

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a href="#" class="register_button">Register</a>
         </div>
       </nav>
-      <img src="./images/icon-menu.svg" alt="" class="header__hamburguerIcon" onclick="openMenu()">
+      <img src="./images/icon-menu.svg" alt="" class="header__hamburguerOpen" onclick="openMenu()">
       <img src="./images/icon-close-menu.svg" alt="" class="header__hamburguerClose">
     </div>
   </header>
